--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ os:
  - linux
 
 python:
-  - "3.6"
+  - "2.7"
 
 global:
   env:
@@ -13,6 +13,7 @@ global:
 
 install:
   # install library
+  - pip install numpy scipy
   - pip install .[test]
 
 script:
