--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ install:
   - pip install .[test]
 
 script:
-  - (cd tests && converage run -m unittest discover -vvv)
+  - (cd tests && coverage run -m unittest discover -vvv)
 
 branches:
   only:
